Name:                http-encodings
Version:             0.99
Synopsis: character and content encodings used in HTTP
Description: A library for encoding and decoding bodies of HTTP messages, designed to work with the HTTP and http-server libraries. WANTED: a library implementing Unix "compress" command encoding/decoding (or the LZW algorithm).
Homepage:            chudnov.com/git-public/http-encodings/
License:             BSD3
License-file:        LICENSE
Author:              Andrey Chudnov
Maintainer:          oss@chudnov.com
-- Copyright:           
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10


Library
  Exposed-modules:     Network.HTTP.Encoding, 
                       Network.HTTP.Encoding.Character, 
                       Network.HTTP.Encoding.Content,
                       Network.HTTP.Encoding.Error  
  Build-depends: base        == 4.*
               , HTTP        == 4000.*
               , bytestring  >= 0.10.2.0
               , zlib        == 0.5.*
               , mtl         == 2.*
               , mime        == 0.3.*
               , text-icu    >= 0.6.4
               , text
  Default-language: Haskell2010